--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,14 @@
         android:theme="@style/Theme.Base_Websocket"
         tools:targetApi="31">
         <activity
+            android:name=".ConfigurationWiFi"
+            android:exported="false" />
+        <activity
+            android:name=".teste"
+            android:exported="false"
+            android:label="@string/title_activity_teste"
+            android:theme="@style/Theme.Base_Websocket.NoActionBar" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
